--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,8 @@ html {
   body {
     margin: 0;
   }
-  
+  font-variant-ligatures: none;
+}  
   article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
     display: block;
   }
