--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'STRRETCH SANS';
-  src: url('../assets/STRRETCH SANS.ttf') format('truetype');
+  src: url('../assets/STRRETCH SANS.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
